Refs #2792 fix bug on 1024px: horizontal scrollbar present, filter box not fully visible on chart page

--- a/scoreboard/theme/static/css/custom.css
+++ b/scoreboard/theme/static/css/custom.css
@@ -1685,6 +1685,13 @@ table {
   }
 }
 
+@media (max-width: 1024px) {
+  #the-filters,
+  .legend-share {
+    max-width: 935px;
+  }
+}
+
 @media (min-width: 1024px) {
   .navbar-collapse {
     margin-top: -5px;
